[project]
name = "image-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "tensorflow>=2.20.0",
]
